# devtools-course-practice

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DevTools.sln  README.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cpplint.vcxproj  cpplint.vcxproj.filters
dashboard/: ctest_ext_notes_log.txt
lab-guide/: lab-1-setup.md  lab-2-library.md  lab-3-application.md
lib/: complex-number.lib  gtest.lib
modules/DebtServiceCosts/: CMakeLists.txt  CTestTests.txt  README.md
modules/Invest/: CMakeLists.txt  README.md
modules/Vigner-code/: README.md
modules/area_calculation/: CMakeLists.txt  README.md
modules/area_of_geometric_shapes/: README.md
modules/bignum-arithmetic/: CTestTests.txt  README.md
modules/binary-search/: CMakeLists.txt  README.md
modules/bits-array/: README.md
modules/books/: README.md
modules/dheap/: README.md
modules/interpolational_search/: CMakeLists.txt  CTestTests.txt  README.md
modules/interpolational_search/application/: interp_search_main_app.cpp
modules/interpolational_search/include/: interp_search.h  interp_search_app.h
modules/interpolational_search/src/: interp_search.cpp  interp_search_app.cpp
modules/interpolational_search/test/: test_interp_search.cpp  test_interp_search_app.cpp  test_main.cpp
modules/quick_sort/: CMakeLists.txt  README.md
modules/quick_sort/include/: q_sort.h
modules/quick_sort/src/: q_sort.cpp
modules/quick_sort/test/: test_main.cpp  test_q_sort.cpp
(+484 files in other folders)
